--- a/pyrticle_life/pyproject.toml
+++ b/pyrticle_life/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "particle-life-2gian"
+name = "pyrticle_life"
 version = "0.1.0"
 description = ""
 authors = ["gianfa"]
@@ -11,6 +11,7 @@ python = "^3.9"
 numpy = "^1.23.4"
 matplotlib = "^3.6.2"
 pygame = "^2.1.2"
+pytest = "^7.2.0"
 
 
 [build-system]
