--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@ Desktop
 particle_life/.idea/
 particle_life/.vs/
 particle_life/obj/
+particle_life2/out/
+particle_life2/.vs/
+particle_life2/.idea/
+.idea
+.vs
