trying to use oneapi

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,34 @@ particle_life2/.vs/
 particle_life2/.idea/
 .idea
 .vs
+/particle_life/bin/particle_life.lib
+/particle_life/bin/particle_life.exp
+/particle_life/bin/particle_life.exe
+/particle_life/bin/fmodL.dll
+/particle_life/bin/fmod.dll
+/particle_life/GPUCache
+/particle_life/VTune Profiler Results
+/particle_life/ofxToggle.optrpt
+/particle_life/ofxToggle.opt.yaml
+/particle_life/ofxSliderGroup.optrpt
+/particle_life/ofxSliderGroup.opt.yaml
+/particle_life/ofxSlider.optrpt
+/particle_life/ofxSlider.opt.yaml
+/particle_life/ofxPanel.optrpt
+/particle_life/ofxPanel.opt.yaml
+/particle_life/ofxLabel.optrpt
+/particle_life/ofxLabel.opt.yaml
+/particle_life/ofxInputField.optrpt
+/particle_life/ofxInputField.opt.yaml
+/particle_life/ofxGuiGroup.optrpt
+/particle_life/ofxGuiGroup.opt.yaml
+/particle_life/ofxColorPicker.optrpt
+/particle_life/ofxColorPicker.opt.yaml
+/particle_life/ofxButton.optrpt
+/particle_life/ofxButton.opt.yaml
+/particle_life/ofxBaseGui.optrpt
+/particle_life/ofxBaseGui.opt.yaml
+/particle_life/ofApp.optrpt
+/particle_life/ofApp.opt.yaml
+/particle_life/main.optrpt
+/particle_life/main.opt.yaml
