--- a/particle_life/particle_life.vcxproj.filters
+++ b/particle_life/particle_life.vcxproj.filters
@@ -7,34 +7,40 @@
 		<ClCompile Include="src\main.cpp">
 			<Filter>src</Filter>
 		</ClCompile>
-		<ClCompile Include="..\..\..\addons\ofxGui\src\ofxBaseGui.cpp">
+		<ClCompile Include="src\main.cpp">
+			<Filter>src</Filter>
+		</ClCompile>
+		<ClCompile Include="src\ofApp.cpp">
+			<Filter>src</Filter>
+		</ClCompile>
+		<ClCompile Include="..\..\..\..\of_v0.11.2_vs2017_release\addons\ofxGui\src\ofxBaseGui.cpp">
 			<Filter>addons\ofxGui\src</Filter>
 		</ClCompile>
-		<ClCompile Include="..\..\..\addons\ofxGui\src\ofxButton.cpp">
+		<ClCompile Include="..\..\..\..\of_v0.11.2_vs2017_release\addons\ofxGui\src\ofxButton.cpp">
 			<Filter>addons\ofxGui\src</Filter>
 		</ClCompile>
-		<ClCompile Include="..\..\..\addons\ofxGui\src\ofxColorPicker.cpp">
+		<ClCompile Include="..\..\..\..\of_v0.11.2_vs2017_release\addons\ofxGui\src\ofxColorPicker.cpp">
 			<Filter>addons\ofxGui\src</Filter>
 		</ClCompile>
-		<ClCompile Include="..\..\..\addons\ofxGui\src\ofxGuiGroup.cpp">
+		<ClCompile Include="..\..\..\..\of_v0.11.2_vs2017_release\addons\ofxGui\src\ofxGuiGroup.cpp">
 			<Filter>addons\ofxGui\src</Filter>
 		</ClCompile>
-		<ClCompile Include="..\..\..\addons\ofxGui\src\ofxInputField.cpp">
+		<ClCompile Include="..\..\..\..\of_v0.11.2_vs2017_release\addons\ofxGui\src\ofxInputField.cpp">
 			<Filter>addons\ofxGui\src</Filter>
 		</ClCompile>
-		<ClCompile Include="..\..\..\addons\ofxGui\src\ofxLabel.cpp">
+		<ClCompile Include="..\..\..\..\of_v0.11.2_vs2017_release\addons\ofxGui\src\ofxLabel.cpp">
 			<Filter>addons\ofxGui\src</Filter>
 		</ClCompile>
-		<ClCompile Include="..\..\..\addons\ofxGui\src\ofxPanel.cpp">
+		<ClCompile Include="..\..\..\..\of_v0.11.2_vs2017_release\addons\ofxGui\src\ofxPanel.cpp">
 			<Filter>addons\ofxGui\src</Filter>
 		</ClCompile>
-		<ClCompile Include="..\..\..\addons\ofxGui\src\ofxSlider.cpp">
+		<ClCompile Include="..\..\..\..\of_v0.11.2_vs2017_release\addons\ofxGui\src\ofxSlider.cpp">
 			<Filter>addons\ofxGui\src</Filter>
 		</ClCompile>
-		<ClCompile Include="..\..\..\addons\ofxGui\src\ofxSliderGroup.cpp">
+		<ClCompile Include="..\..\..\..\of_v0.11.2_vs2017_release\addons\ofxGui\src\ofxSliderGroup.cpp">
 			<Filter>addons\ofxGui\src</Filter>
 		</ClCompile>
-		<ClCompile Include="..\..\..\addons\ofxGui\src\ofxToggle.cpp">
+		<ClCompile Include="..\..\..\..\of_v0.11.2_vs2017_release\addons\ofxGui\src\ofxToggle.cpp">
 			<Filter>addons\ofxGui\src</Filter>
 		</ClCompile>
 	</ItemGroup>
@@ -56,40 +62,43 @@
 		<ClInclude Include="src\ofApp.h">
 			<Filter>src</Filter>
 		</ClInclude>
-		<ClInclude Include="..\..\..\addons\ofxGui\src\ofxBaseGui.h">
+		<ClInclude Include="src\ofApp.h">
+			<Filter>src</Filter>
+		</ClInclude>
+		<ClInclude Include="..\..\..\..\of_v0.11.2_vs2017_release\addons\ofxGui\src\ofxBaseGui.h">
 			<Filter>addons\ofxGui\src</Filter>
 		</ClInclude>
-		<ClInclude Include="..\..\..\addons\ofxGui\src\ofxButton.h">
+		<ClInclude Include="..\..\..\..\of_v0.11.2_vs2017_release\addons\ofxGui\src\ofxButton.h">
 			<Filter>addons\ofxGui\src</Filter>
 		</ClInclude>
-		<ClInclude Include="..\..\..\addons\ofxGui\src\ofxColorPicker.h">
+		<ClInclude Include="..\..\..\..\of_v0.11.2_vs2017_release\addons\ofxGui\src\ofxColorPicker.h">
 			<Filter>addons\ofxGui\src</Filter>
 		</ClInclude>
-		<ClInclude Include="..\..\..\addons\ofxGui\src\ofxGui.h">
+		<ClInclude Include="..\..\..\..\of_v0.11.2_vs2017_release\addons\ofxGui\src\ofxGui.h">
 			<Filter>addons\ofxGui\src</Filter>
 		</ClInclude>
-		<ClInclude Include="..\..\..\addons\ofxGui\src\ofxGuiGroup.h">
+		<ClInclude Include="..\..\..\..\of_v0.11.2_vs2017_release\addons\ofxGui\src\ofxGuiGroup.h">
 			<Filter>addons\ofxGui\src</Filter>
 		</ClInclude>
-		<ClInclude Include="..\..\..\addons\ofxGui\src\ofxGuiUtils.h">
+		<ClInclude Include="..\..\..\..\of_v0.11.2_vs2017_release\addons\ofxGui\src\ofxGuiUtils.h">
 			<Filter>addons\ofxGui\src</Filter>
 		</ClInclude>
-		<ClInclude Include="..\..\..\addons\ofxGui\src\ofxInputField.h">
+		<ClInclude Include="..\..\..\..\of_v0.11.2_vs2017_release\addons\ofxGui\src\ofxInputField.h">
 			<Filter>addons\ofxGui\src</Filter>
 		</ClInclude>
-		<ClInclude Include="..\..\..\addons\ofxGui\src\ofxLabel.h">
+		<ClInclude Include="..\..\..\..\of_v0.11.2_vs2017_release\addons\ofxGui\src\ofxLabel.h">
 			<Filter>addons\ofxGui\src</Filter>
 		</ClInclude>
-		<ClInclude Include="..\..\..\addons\ofxGui\src\ofxPanel.h">
+		<ClInclude Include="..\..\..\..\of_v0.11.2_vs2017_release\addons\ofxGui\src\ofxPanel.h">
 			<Filter>addons\ofxGui\src</Filter>
 		</ClInclude>
-		<ClInclude Include="..\..\..\addons\ofxGui\src\ofxSlider.h">
+		<ClInclude Include="..\..\..\..\of_v0.11.2_vs2017_release\addons\ofxGui\src\ofxSlider.h">
 			<Filter>addons\ofxGui\src</Filter>
 		</ClInclude>
-		<ClInclude Include="..\..\..\addons\ofxGui\src\ofxSliderGroup.h">
+		<ClInclude Include="..\..\..\..\of_v0.11.2_vs2017_release\addons\ofxGui\src\ofxSliderGroup.h">
 			<Filter>addons\ofxGui\src</Filter>
 		</ClInclude>
-		<ClInclude Include="..\..\..\addons\ofxGui\src\ofxToggle.h">
+		<ClInclude Include="..\..\..\..\of_v0.11.2_vs2017_release\addons\ofxGui\src\ofxToggle.h">
 			<Filter>addons\ofxGui\src</Filter>
 		</ClInclude>
 	</ItemGroup>
