binary without avx512 for you guys with cpu gen > 11

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ particle_life2/.idea/
 /particle_life/ofApp.opt.yaml
 /particle_life/main.optrpt
 /particle_life/main.opt.yaml
+/particle_life/pl-compiled/bin
